[package]
name = "node-cache-recorder"
edition.workspace = true
exclude.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
async-trait.workspace = true
eyre.workspace = true
pickledb.workspace = true
serde.workspace = true
tokio.workspace = true
