[package]
name = "node-cache-rpc"
edition.workspace = true
exclude.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
node-cache-recorder.workspace = true

async-trait.workspace = true
eyre.workspace = true
futures.workspace = true

# alloy
alloy-dyn-abi.workspace = true
alloy-primitives.workspace = true
alloy-provider = { workspace = true, features = ["debug-api", "trace-api"] }
alloy-rpc-types-debug.workspace = true
alloy-rpc-types-eth.workspace = true
alloy-rpc-types-trace.workspace = true
alloy-serde.workspace = true
alloy-transport.workspace = true

# rpc
bytes = "1.8.0"
jsonrpsee.workspace = true
reth-rpc.workspace = true
reth-rpc-api.workspace = true
reth-rpc-eth-api.workspace = true
